--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "libft"]
 	path = libft
 	url = git@github.com:Anya-Stella/42_Libft.git
+[submodule "get-next-line"]
+	path = get-next-line
+	url = git@github.com:Anya-Stella/get_next_line.git
